API atualizada
Inclusão e atualização de controllers para o painel do Administrador (listAllUsers, metrics, deleteUser, recentActivity)
