# src/back-end/src/routes/admin-routes.ts
@@ -6,7 +6,9 @@ const adminRoutes = Router()
 const adminController = new AdminController()
 
 adminRoutes.use(verifyUserAuthorization(["admin"]))
-adminRoutes.get("/users", adminController.listUsers)
+adminRoutes.get("/users", adminController.listAllUsers)
 adminRoutes.get("/metrics", adminController.metrics)
+adminRoutes.delete("/users/:id", adminController.deleteUser)
+adminRoutes.get("/recent-activity", adminController.recentActivity)
 
 export { adminRoutes }
